--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "jupiter-backtesting"
-version = "0.1.3"
+name = "quant-vbt"
+version = "0.1.4"
 description = "Lightweight Vectorbt extension with in-built statistical backtesting methods"
 readme = "README.md"
 requires-python = ">=3.8"
