--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,32 @@
 [project]
 name = "quantybt"
-version = "0.1.3"
+version = "0.1.5"
 description = "Lightweight Vectorbt extension with in-built advanced statistical backtesting methods"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
+license = { text = "MIT" }
 authors = [
-  {name = "Niklas", email = "niklasschluetter.business@gmail.com"}
+  { name = "Niklas", email = "niklasschluetter.business@gmail.com" }
 ]
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent"
 ]
 dependencies = [
-    "pandas",
-    "numpy",
-    "scipy",       
-    "plotly",       
-    "kaleido",    
-    "vectorbt",
-    "pandas_ta",
-    "hyperopt",
+  "pandas",
+  "numpy",
+  "scipy",
+  "plotly",
+  "kaleido",
+  "vectorbt",
+  "pandas_ta",
+  "hyperopt"
 ]
 
-
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+include-package-data = true
