--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "quantybt"
-version = "0.1.9"
+version = "0.1.9.1"
 description = "lightweight backtesting framework with in-built advanced statistical backtesting methods and custom models"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -23,7 +23,9 @@ dependencies = [
   "kaleido",
   "vectorbt",
   "seaborn",
-  "hyperopt"
+  "hyperopt",
+  "ccxt",   
+  "pyarrow"
 ]
 
 [build-system]
